[tool.poetry]
name = "cynthia"
version = "0.1.0"
description = ""
authors = ["Jacob-Short <thatmanjshort@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.47.0"
wolframalpha = "^5.0.0"
wikipedia = "^1.4.0"
black = "^21.9b0"
gTTS = "^2.2.3"
pyttsx3 = "^2.90"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
